<resources>
    <string name="app_name">Трекер задач</string>
    <string name="filter">Фильтр</string>
    <string name="status_new">Новые</string>
    <string name="status_in_process">В процессе</string>
    <string name="status_ended">Завершенные</string>
    <string name="tm_status_new">Новый</string>
    <string name="tm_status_in_process">В процессе</string>
    <string name="tm_status_ended">Завершенный</string>
    <string name="tm_add_but">Добавить</string>
    <string name="tm_edit_but">Изменить</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Добавить виджет</string>
    <string name="move">Перейти</string>


</resources>
