<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.crazycrosshair.task_tracker.Taskmanager">

    <LinearLayout
        android:id="@+id/taskmanager_ll"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/taskmanager_task_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Задача"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/taskmanager_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="datetime_clicked"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/taskmanager_status_new_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="Checkbox_clicked"
            android:text="@string/tm_status_new" />

        <CheckBox
            android:id="@+id/taskmanager_status_pro_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Checkbox_clicked"
            android:text="@string/tm_status_in_process" />

        <CheckBox
            android:id="@+id/taskmanager_status_end_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Checkbox_clicked"
            android:text="@string/tm_status_ended" />

        <EditText
            android:id="@+id/taskmanager_note_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Заметка"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/taskmanager_add-edit_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addedit_but_clicked"
            android:text="@string/tm_add_but" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
