<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.crazycrosshair.task_tracker.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="56dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="Newtask"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/mainactivity_tvfilter"
                android:layout_width="58dp"
                android:layout_height="47dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/filter"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/mainactivity_tbnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/status_new"
                android:textOff="@string/status_new"
                android:textOn="@string/status_new"
                android:textSize="11sp"
                android:onClick="Tb_clicked"/>

            <ToggleButton
                android:id="@+id/mainactivity_tbproces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/status_in_process"
                android:textOff="@string/status_in_process"
                android:textOn="@string/status_in_process"
                android:textSize="11sp"
                android:onClick="Tb_clicked"/>

            <ToggleButton
                android:id="@+id/mainactivity_tbend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/status_ended"
                android:textOff="@string/status_ended"
                android:textOn="@string/status_ended"
                android:textSize="10sp"
                android:onClick="Tb_clicked"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TableLayout
                android:id="@+id/mainactivity_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

            </TableLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
